Fixed inspection and FindBugs analysis findings